--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
 
 /* nav items */
 
-.nav-item:hover{
-    background: #23a6f0;
-    border-radius: 5px;
+.nav-item:hover {
+  background: #23a6f0;
+  border-radius: 5px;
 }
 
 /* login-button */
@@ -28,8 +28,7 @@ body {
   color: #e0e0e0;
   line-height: 30px;
 }
- 
- 
+
 /* modal button  */
 .modal-btn {
   background-color: #e76f51;
@@ -53,15 +52,12 @@ body {
   color: #e76f51;
 }
 
-.clients-img-1,
-.clients-img-2 {
+.clients-img
+ {
   width: 149px;
   margin: 35px auto;
 }
-.clients-img-3 {
-  width: 149px;
-  margin: 60px auto;
-}
+
 .clients-says {
   color: gray;
   font-size: 16px;
@@ -79,6 +75,6 @@ body {
 }
 
 /* accordition  */
-.accordion-body{
-    color: gray;
+.accordion-body {
+  color: gray;
 }
